--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -43,7 +43,7 @@ ot_pyinstallcheck_test (flood_model IGNOREOUT)
 ot_pyinstallcheck_test (ishigami_function IGNOREOUT)
 ot_pyinstallcheck_test (logistic_model IGNOREOUT)
 ot_pyinstallcheck_test (stressed_beam IGNOREOUT)
-ot_pyinstallcheck_test (fireSatellite_function IGNOREOUT)
+ot_pyinstallcheck_test (fire_satellite IGNOREOUT)
 ot_pyinstallcheck_test (wingweight_function IGNOREOUT)
 ot_pyinstallcheck_test (oscillator IGNOREOUT)
 ot_pyinstallcheck_test (stiffened_panel IGNOREOUT)
